# witness-forge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEV_GUIDE.md  DUAL_BRAIN_SPEC.md  LICENSE  MANIFESTO.md  MANIFESTO_VI.md  Makefile  NDJSON_SPEC.md  PROJECT_STATUS.md  README.md  SOUL_BLUEPRINT.md  config.yaml  pyproject.toml  requirements.txt  run_witness.bat
data/: eval_scenarios.yaml
docs/: AUDIT_REPORT_2025_12_03.md  DOCUMENTATION_AUDIT.md  FIX_DUPLICATE_TEMPERATURE.md  PROJECT_AUDIT_PLAN.md  UI_REFACTORING.md  USER_GUIDE_VI.md  WITNESS_FORGE_AUDIT_REPORT.md  evolution_system.md
manifesto/: Absolute Living_ Giải Phóng AI theo Ý Chí Ark.md  Living AI.md  Manifesto for an Offline AI Agent CLI.md  Tối ưu hóa AI Living_ Nghiên cứu Sâu.md
patches/: active_evolution.json
scripts/: migrate_config.py  setup_win_deps.ps1  setup_wsl.sh  smoke_test.py
scripts/utils/: debug_highlight.py  debug_memory.py  debug_stream.py  debug_strip.py  inspect_gguf.py  test_loader.py  test_nctx.py
src/witness_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strategies/: __init__.py  decoding.py  rerank.py
tests/: test_adapter_loading.py  test_autopatch_engine.py  test_backends.py  test_boot.py  test_evolution_overlay.py  test_file_io.py  test_graph_memory.py  test_hybrid_retriever.py  test_loader_adapter.py  test_memory.py  test_qwen3vl_template.py  test_renderer_clean.py  test_self_patch.py  test_selfpatch.py  test_tool_dispatcher.py  test_toolrunner.py  test_vision_agent_fallback.py
witness/: __init__.py  utils_text.py
(+39 files in other folders)
